[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Battle/AbilityConnecting.png" type="Texture" id=1]
[ext_resource path="res://Assets/Font/2_MiscriaMedium_Miscria-Medium.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scenes/Battle/Ability.gd" type="Script" id=3]
[ext_resource path="res://Assets/Ui/Miscrits/Fire_Type.png" type="Texture" id=4]
[ext_resource path="res://Assets/Battle/5_AbilityButtonElementBG.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 15
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
extra_spacing_top = -1
extra_spacing_bottom = -4
extra_spacing_char = 1
extra_spacing_space = 1
font_data = ExtResource( 2 )

[node name="Ability" type="TextureButton"]
margin_right = 177.0
margin_bottom = 60.0
texture_normal = ExtResource( 1 )
script = ExtResource( 3 )

[node name="Name" type="Label" parent="."]
margin_left = 53.0
margin_top = -9.0
margin_right = 155.0
margin_bottom = 67.0
rect_pivot_offset = Vector2( 51, 38 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "DEBILIATE"
align = 1
valign = 1
autowrap = true
uppercase = true

[node name="Back" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -81.5
margin_top = 7.0
margin_right = -31.5
margin_bottom = 59.0
rect_scale = Vector2( 0.9, 0.9 )
mouse_filter = 2
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_group_": true
}

[node name="Element" type="TextureRect" parent="Back"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -23.0
margin_top = -23.0
margin_right = 23.0
margin_bottom = 23.0
mouse_filter = 2
texture = ExtResource( 4 )
expand = true

[connection signal="mouse_entered" from="." to="." method="_on_Ability_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Ability_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_Ability_pressed"]
